--- a/index.html
+++ b/index.html
@@ -1,8 +1,45 @@
+<!DOCTYPE html>
 <html>
-  <head>
+
+<head>
+    <meta charset="UTF-8">
     <title>Snake</title>
-  </head>
-  <body>
-    <h1>Soon™</h1>
-  </body>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+
+    <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+
+    <script src="libraries/p5.js" type="text/javascript"></script>
+
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+
+    <script src="sketch.js" type="text/javascript"></script>
+    <script src="snake.js" type="text/javascript"></script>
+    <script src="score.js" type="text/javascript"></script>
+
+    <style>
+
+    </style>
+</head>
+
+<body>
+<div class="container">
+    <h3>Classic Arcade Game Sanke</h3>
+    <h5>Made with p5.js</h5>
+    <div id="game"></div>
+    <div id="info">
+        <table>
+            <tr>
+                <td id="score">Score: 0</td>
+                <td id="highscore">Local: 0</td>
+                <td id="globalhighscore">Global:</td>
+            </tr>
+        </table>
+        <p id="death"></p>
+    </div>
+</div>
+
+</body>
+
 </html>
