--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </tr>
         </table>
         <p id="death"></p>
+        <p>Use arrow key to move around</p>
     </div>
 </div>
 
