--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Arcade Game Sanke</title>
-	<link href="index.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
+	<script async src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+	<script async src="libraries/p5.js" type="text/javascript"></script>
+	<!--<script src="libraries/p5.dom.js" type="text/javascript"></script>-->
+	<!--<script src="libraries/p5.sound.js" type="text/javascript"></script>-->
+	<script async src="js/sketch.js" type="text/javascript"></script>
+	<script async src="js/snake.js" type="text/javascript"></script>
+	<script async src="js/score.js" type="text/javascript"></script>
 	<style>
 		.github-corner:hover .octo-arm {
 			animation: octocat-wave 560ms ease-in-out
-		}		
+		}	
 		@keyframes octocat-wave {
 			0%,
 			100% {
@@ -21,7 +29,7 @@
 			80% {
 				transform: rotate(10deg)
 			}
-		}	
+		}
 		@media (max-width: 500px) {
 			.github-corner:hover .octo-arm {
 				animation: none
@@ -44,23 +52,17 @@
 		</svg>
 	</a>
 	<div class="container">
-		<h3 class="header">Arcade Sanke</h3>
-		<div class="body">
-			<p>This is a game made with p5.js and Firebase</p>
-			<h3>Instructions</h3>
-			<p>You will play with the arrow keys on your keyboard, when you die refresh the page to start a new game.</p>
-			<h3>TODO</h3>
-			<ul>
-				<li>Make a reset button</li>
-				<li>Make so user can change name</li>
-				<li>Make this page more cute</li>
-				<li>Beautify code</li>
-			</ul>
-			<div class="play">
-			<a href="/src" class="button">Play</a>
+		<h3>Arcade Game Sanke</h3>
+		<div id="game"></div>
+		<div id="info">
+			<div id="scores">
+				<p id="score">Score: ABC 0</p>
+				<p id="highscore">Local: ABC 0</p>
+				<p id="globalhighscore">Global: ABC 0</p>
 			</div>
+			<p id="death"></p>
+			<p>Use arrow key to move around</p>
 		</div>
-		
 	</div>
 </body>
 </html>
