Fix link to game

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<li>Beautify code</li>
 			</ul>
 			<div class="play">
-			<a href="/src" class="button">Play</a>
+			<a href="p5-snake/src" class="button">Play</a>
 			</div>
 		</div>
 		
