--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Arcade Game Sanke</title>
+	<title>Arcade Sanke</title>
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 	<script async src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
@@ -54,14 +54,10 @@
 	<div class="container">
 		<h3>Arcade Game Sanke</h3>
 		<div id="game"></div>
-		<div id="info">
-			<div id="scores">
-				<p id="score">Score: ABC 0</p>
-				<p id="highscore">Local: ABC 0</p>
-				<p id="globalhighscore">Global: ABC 0</p>
-			</div>
-			<p id="death"></p>
-			<p>Use arrow key to move around</p>
+		<div id="scores">
+			<p id="score">Score: 0</p>
+			<p id="highscore">Local: ABC 0</p>
+			<p id="globalhighscore">Global: ABC 0</p>
 		</div>
 	</div>
 </body>
