--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 		</svg>
 	</a>
 	<div class="container">
-		<h3>Arcade Game Sanke</h3>
+		<h3>Arcade Game Snake</h3>
 		<div id="game"></div>
 		<div id="scores">
 			<p id="score">Score: 0</p>
