--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Arcade Game Sanke</title>
+	<title>Arcade Game Snake</title>
 	<link href="index.css" rel="stylesheet" />
 	<style>
 		.github-corner:hover .octo-arm {
@@ -44,7 +44,7 @@
 		</svg>
 	</a>
 	<div class="container">
-		<h3 class="header">Arcade Sanke</h3>
+		<h3 class="header">Arcade Snake</h3>
 		<div class="body">
 			<p>This is a game made with p5.js and Firebase</p>
 			<h3>Instructions</h3>
