--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Arcade Sanke</title>
+	<title>Arcade Snake</title>
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 	<script async src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
