Clean up, added reset and change name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Arcade Game Sanke</title>
+	<title>Arcade Game Snake</title>
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 	<link href="index.css" rel="stylesheet" />
 	<style>
 		.github-corner:hover .octo-arm {
@@ -44,18 +45,11 @@
 		</svg>
 	</a>
 	<div class="container">
-		<h3 class="header">Arcade Sanke</h3>
+		<h3 class="header">Arcade Snake</h3>
 		<div class="body">
 			<p>This is a game made with p5.js and Firebase</p>
 			<h3>Instructions</h3>
 			<p>You will play with the arrow keys on your keyboard, when you die refresh the page to start a new game.</p>
-			<h3>TODO</h3>
-			<ul>
-				<li>Make a reset button</li>
-				<li>Make so user can change name</li>
-				<li>Make this page more cute</li>
-				<li>Beautify code</li>
-			</ul>
 			<div class="play">
 			<a href="src" class="button">Play</a>
 			</div>
