--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<style>
 		.github-corner:hover .octo-arm {
 			animation: octocat-wave 560ms ease-in-out
-		}	
+		}
 		@keyframes octocat-wave {
 			0%,
 			100% {
@@ -63,7 +63,7 @@
 			<p id="globalhighscore">Global: ABC 0</p>
 		</div>
 	</div>
-	<div style="display: inline-flex; text-align: center; width: 100%">
+	<div style="display: inline-flex; text-align: center; width: 100%; position: fixed; bottom: 0; left: 10px;">
 		<p id="reset">Reset</p>
 		<p id="changeName" style="margin-left: 15px">Change Name</p>
 	</div>
