--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="css/index.css" rel="stylesheet">
   <script async src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
   <script async src="libraries/p5.js" type="text/javascript"></script>
-  <!--<script src="libraries/p5.dom.js" type="text/javascript"></script>-->
+  <script src="libraries/p5.dom.js" type="text/javascript"></script>
   <!--<script src="libraries/p5.sound.js" type="text/javascript"></script>-->
   <script async src="js/main.js" type="text/javascript"></script>
   <script async src="js/sketch.js" type="text/javascript"></script>
