--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="css/index.css" rel="stylesheet">
   <script async src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
   <script async src="libraries/p5.js" type="text/javascript"></script>
-  <script src="libraries/p5.dom.js" type="text/javascript"></script>
+  <!--<script src="libraries/p5.dom.js" type="text/javascript"></script>-->
   <!--<script src="libraries/p5.sound.js" type="text/javascript"></script>-->
   <script async src="js/main.js" type="text/javascript"></script>
   <script async src="js/sketch.js" type="text/javascript"></script>
@@ -71,6 +71,21 @@
 <div style="display: inline-flex; text-align: center; width: 100%; position: fixed; bottom: 0; left: 10px;">
   <p id="reset">Reset</p>
   <p id="changeName" style="margin-left: 15px">Change Name</p>
+</div>
+<div id="userInput" class="hiddenDefault">
+  <div class="container userInput">
+	<h3>Input a three letter name!</h3>
+	<div class="inner-box">
+	  <p>-</p>
+	  <div>
+		<label>
+		  Username:
+		  <input type="text" about="username" id="username">
+		</label>
+		<p id="enter">Enter</p>
+	  </div>
+	</div>
+  </div>
 </div>
 </body>
 </html>
