--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,8 @@
   <div class="container userInput">
 	<h3>Input a three letter name!</h3>
 	<div class="inner-box">
-	  <p>-</p>
-	  <div>
+	  <p>Why? <br> The reason why you need to input a three letter name is only by reason of the UI can not handle so many characters if you get a high score over 100 you will see why. The UI will become screwed</p>
+	  <div class="inline-block">
 		<label>
 		  Username:
 		  <input type="text" about="username" id="username">
