Moved files around

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <br> R to reset C to change name
             </p>
             <div class="play">
-                <a href="src" class="button">Play</a>
+                <a href="assets" class="button">Play</a>
             </div>
         </div>
 
