Add some style to Game Over dialog

--- a/assets/index.html
+++ b/assets/index.html
@@ -63,8 +63,6 @@
             <p id="globalhighscore">Global: ABC 0</p>
         </div>
     </div>
-    <div class="controlls">
-    </div>
     <!-- :End -->
     <div id="userInput" class="hiddenDefault">
         <div class="container userInput">
@@ -88,7 +86,7 @@
             <h3>Game Over</h3>
             <p id="reason"></p>
             <p>Not much you can do about it.</p>
-            <div class="inline-block">
+            <div class="inline-block controllers">
                 <p id="changeName" class="controller">Change Name</p>
                 <p id="reset" class="controller">Reset</p>
             </div>
